<resources>
    <string name="app_name">CalculadoraApp</string>

    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>

    <string name="limpiar">C</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">×</string>
    <string name="div">÷</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="porcentaje">%</string>

    <string name="retroceso"> </string>

    <string name="display">Ingrese un valor</string>
</resources>